# ButterFence

./: .gitignore  LICENSE  README.md  SUBMISSION_SUMMARY.md  butter_fence_mvp_plan.md  pyproject.toml
assets/: scenarios.yaml
demo/: VIDEO_SCRIPT.md
demo/vulnerable-repo/: .env  README.md  fake_credentials.pem
src/butterfence/: __init__.py  analytics.py  audit.py  auth.py  chain_detector.py  cli.py  config.py  hook_runner.py  installer.py  matcher.py  packs.py  policy.py  redteam.py  report.py  rules.py  scanner.py  scoring.py  watcher.py
src/butterfence/exporters/: badge.py  html_report.py
tests/: test_audit.py  test_cli.py  test_matcher.py  test_redteam.py
